--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Магазин товаров для животных «Лапка»</title>
+  <title>Цветочный магазин «Flowers»</title>
 </head>
 <body>
   <header>
     <nav>
       <ul class="container nav">
         <li>
-          <a href="#" class="logo">Лапка:store</a>
+          <a href="#" class="logo">Flowers:store</a>
         </li>
         <li>
           <a href="#shop-items">Каталог</a>
@@ -49,7 +49,7 @@
     <p id="nothing-found">Ничего не найдено</p>
   </main>
   <footer id="contacts" class="container">
-    <a href="#" class="logo">Лапка:store</a>
+    <a href="#" class="logo">Flowers:store</a>
   </footer>
   <template id="item-template">
     <div class="shop-item">
